--- a/Medi-Track/frontend/src/components/Login/Login.css
+++ b/Medi-Track/frontend/src/components/Login/Login.css
@@ -1,19 +1,24 @@
 /* General Background */
 /* General Background */
-.login-background {
-    /*120deg, rgba(106, 17, 203, 0.7), rgba(37, 117, 252, 0.7))*/
+/* .login-background {
     background: url('/home/varun/varun/DTL/Medi-Track/Medi-Track/frontend/src/assets/loginbackground.jpeg');
-    background-size: cover; /* Ensures the image covers the whole background */
-    background-position: center; /* Centers the image */
+    background-size: cover; 
+    background-position: center; 
     height: 100vh;
     display: flex;
-    justify-content: center; /* Centers the container horizontally */
-    align-items: center;     /* Centers the container vertically */
-    padding: 20px;
+    justify-content: center; 
+    align-items: center;     
+    box-sizing: border-box;
+} */
+
+.login-background{background-size: cover; 
+    background-position: center; 
+    height: 100vh;
+    display: flex;
+    justify-content: center; 
+    align-items: center;     
     box-sizing: border-box;
 }
-
-
 /* Login Container */
 .login-container {
     background-color: rgba(255, 255, 255, 0.95); /* Increased opacity for better contrast */
