--- a/Medi-Track/frontend/src/components/Login/Login.css
+++ b/Medi-Track/frontend/src/components/Login/Login.css
@@ -11,7 +11,8 @@
     box-sizing: border-box;
 } */
 
-.login-background{background-size: cover; 
+.login-background{
+    background-color: #faf2e4;
     background-position: center; 
     height: 100vh;
     display: flex;
@@ -19,9 +20,19 @@
     align-items: center;     
     box-sizing: border-box;
 }
+/* 
+.login-background{background-size: cover; 
+    background-position: center; 
+    height: 100vh;
+    display: flex;
+    justify-content: center; 
+    align-items: center;     
+    box-sizing: border-box;
+} */
 /* Login Container */
 .login-container {
     background-color: rgba(255, 255, 255, 0.95); /* Increased opacity for better contrast */
+    text-decoration-color: #ffffff;
     padding: 40px;
     border-radius: 20px;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
