--- a/Medi-Track/frontend/src/components/Register/Register.css
+++ b/Medi-Track/frontend/src/components/Register/Register.css
@@ -13,12 +13,20 @@
 .register-container {
     background-color: rgba(255, 255, 255, 0.95);
     padding: 45px;
-    border-radius: 25px; /* Increased the border radius for a softer look */
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1); /* Slightly reduced shadow opacity for a more subtle effect */
+    border-radius: 25px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     width: 100%;
     max-width: 500px;
-    max-height: fit-content;
+    max-height: 85%; /* Limit height for scrollability */
+    overflow-y: auto; /* Enable vertical scroll */
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+    scrollbar-width:none; /* For Firefox */
 }
+
+.register-container::-webkit-scrollbar{
+    display: none;
+}
+
 
 .register-title {
     color: #6a11cb;
