--- a/Medi-Track/frontend/src/components/HealthRecords/HealthRecords.css
+++ b/Medi-Track/frontend/src/components/HealthRecords/HealthRecords.css
@@ -1,6 +1,6 @@
 /* Medical Records Container */
-.medical-records-container {
-  background: linear-gradient(to right, #4ccb11, #2575fc);
+.medical-records-container {  
+  background-color: #faf2e4;
   color: #fff;
   padding: 50px;
   font-family: 'Arial', sans-serif;
@@ -60,18 +60,21 @@ h1 {
 
 /* Form Container */
 .form-container {
-  background-color: #333;
+  max-width: 50%;
+  align-content: left;
+  background-color: white!important;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 /* Form Title */
-.form-container h2 {
+.form-container h1 {
   text-align: center;
   margin-bottom: 20px;
-  color: #fff;
+  color:darkblue !important;
+  margin-bottom: 10px;
 }
 
 /* Form Group */
@@ -82,7 +85,8 @@ h1 {
 .form-group label {
   display: block;
   margin-bottom: 8px;
-  color: #fff;
+  font-size: 18px;
+  color: darkslategray;
 }
 
 .form-group input {
