--- a/Medi-Track/frontend/src/components/HealthRecords/HealthRecords.css
+++ b/Medi-Track/frontend/src/components/HealthRecords/HealthRecords.css
@@ -153,3 +153,44 @@ h1 {
 .table button.btn-danger:hover {
   background-color: #bd2130;
 }
+
+.get-record-button{ 
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  padding: 12px 25px;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: background-color 0.3s ease;
+}
+
+.get-doc-button{ 
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  padding: 12px 25px;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: background-color 0.3s ease;
+  margin-left: 50px;
+}
+
+.get-doc-container{
+  margin-left: 7%;
+  align-content: center;
+  margin-top: 15px;
+  max-width: 85%;
+}
+
+.fetch-file-button{
+  background-color: #28a745;
+  color: #fff;
+  border: none;
+  padding: 12px 25px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: background-color 0.3s ease;
+}
