--- a/Medi-Track/frontend/src/components/Doctors/Doctors.css
+++ b/Medi-Track/frontend/src/components/Doctors/Doctors.css
@@ -1,9 +1,9 @@
 /* General container styles */
 .page-background{
-    background-color: aqua;
+    background-color: #faf2e4;
+    min-height: 100vh;
 }
 /* .container {
-    background: linear-gradient(to right, #ff0000, #004e9c);
     color: #ffffff;
     padding: 20px;
     min-height: 100vh;
@@ -12,15 +12,17 @@
   /* Dashboard button styles */
   .dashboard-button {
     position: absolute;
-    top: 20px;
+    top: 30px;
     left: 20px;
   }
   
   /* Page header styles */
   .page-header {
+    padding-top: 1.5%;
+    font-size: 48px;
     text-align: center;
     margin: 60px 0;
-    color: white;
+    color: blue;
   }
   
   /* Form button styles */
@@ -118,3 +120,17 @@
     padding: 5px 10px;
   }
   
+  .book-appoint-button{
+    background: #2575fc;
+    border: none;
+    border-radius: 25px !important; /* Rounded button */
+    padding: 15px;
+    font-size: 16px;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+  }
