--- a/Medi-Track/frontend/src/components/Login/Login.css
+++ b/Medi-Track/frontend/src/components/Login/Login.css
@@ -12,7 +12,9 @@
 } */
 
 .login-background{
-    background-color: #faf2e4;
+    /* background-color: #faf2e4; */
+    background: url('/home/varun/varun/DTL/Medi-Track/Medi-Track/frontend/src/assets/loginbackground.jpeg');
+    background-size: cover; 
     background-position: center; 
     height: 100vh;
     display: flex;
