--- a/Medi-Track/frontend/src/components/Doctors/Doctors.css
+++ b/Medi-Track/frontend/src/components/Doctors/Doctors.css
@@ -41,7 +41,7 @@
   
   .form-box {
     width: 60%;
-    background-color: #2e2e2e;
+    /* background-color: whit; */
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
