--- a/Medi-Track/frontend/src/components/Register/Register.css
+++ b/Medi-Track/frontend/src/components/Register/Register.css
@@ -1,7 +1,7 @@
 /* Background and Container Styles */
 .register-background {     
-    /* background-color: #faf2e4; */
-    background: url('/home/varun/varun/DTL/Medi-Track/Medi-Track/frontend/src/assets/loginbackground.jpeg');
+    background-color: #faf2e4;
+    /* background: url('/home/varun/varun/DTL/Medi-Track/Medi-Track/frontend/src/assets/loginbackground.jpeg'); */
     background-size: cover; 
     background-size: cover;
     background-position: center;
